fixed margins out of alignment

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,16 +2,14 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 
-html,
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
